<resources>
    <string name="app_name">App Open</string>
    <string name="retry">Retry</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_net_con">Check your internet connection</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="action_about">About Us</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="action_settings">Settings</string>
    <string name="online_tools">Online Tools</string>
    <string name="keyword_tool_google">Keyword tool for google</string>
    <string name="keyword_tool_yt">Keyword tool for YouTube</string>
    <string name="more_apps">More Apps</string>
    <string name="help_feedback">Help and Feedback</string>
    <string name="app_not_working">App not working?</string>
    <string name="rete_us">Rate Us</string>
    <string name="share_this_app">Share this app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="link">Link</string>
    <string name="paste">Paste</string>
    <string name="search">Search</string>
    <string name="ad">Ad</string>
    <string name="install_now">Install Now</string>
    <string name="nav_header_title">Header Title</string>
    <string name="nav_header_desc">Header Desc</string>
    <string name="oops_no_internet_connection">No Internet Connection</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="creat">Create</string>
    <string name="open_links_directly_in_apps">Open Links Directly In Apps</string>
    <string name="generate_link">Generate Link</string>
    <string name="paste_url">Paste Url</string>
    <string name="short_url">Short Url</string>
    <string name="long_url">Long Url</string>
    <string name="delete_all">Delete All</string>
    <string name="your_name">Your Name</string>
    <string name="message">Message</string>
    <string name="send_message">Send Message</string>
    <string name="contact_us">Contact us | send feedback</string>
    <string name="we_will_reply_to_your_message_within_8_working_hours_so_have_patience_thanks_for_using_our_app">We will reply to your message within 8 working hours. So have patience. Thanks for using our app.</string>
    <string name="contact_email">skprogrammingdesire@gmail.com</string>
    <string name="launch_appopen_me">Launch Appopen.me</string>
    <string name="you_can_user_appopen_me_website">You can user appopen.me website</string>
    <string name="paste_short_url">Paste short Url</string>
    <string name="get_short_link_info">Get short link info</string>
    <string name="not_a_valid_url">Not a valid appopen.me URL</string>
    <string name="link_info">Link Info</string>
    <string name="later">Later</string>
    <string name="rate">Rate Now</string>
    <string name="would_you_mind_rating_us">Would you mind rating us?</string>
    <string name="enjoying_the_app">Enjoying the app?</string>
    <string name="submit">submit</string>

</resources>