<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_fragment_home"
                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_fragment_history"
                    android:title="@string/history" />
                <item
                    android:id="@+id/nav_fragment_settings"
                    android:title="@string/action_settings" />
            </group>
        </menu>
    </item>

    <item android:title="@string/online_tools">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_keyword_tool_google"
                    android:title="@string/keyword_tool_google" />
                <item
                    android:id="@+id/nav_keyword_tool_yt"
                    android:title="@string/keyword_tool_yt" />
            </group>
        </menu>
    </item>

    <item android:title="@string/more_apps">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_more_apps"
                    android:title="@string/more_apps" />
            </group>
        </menu>
    </item>

    <item android:title="@string/help_feedback">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_your_feedback"
                    android:title="@string/app_not_working" />

                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rete_us" />
                <item
                    android:id="@+id/nav_share_this_app"
                    android:title="@string/share_this_app" />

                <item
                    android:id="@+id/nav_privacy_policy"
                    android:title="@string/privacy_policy" />
                <item
                    android:id="@+id/nav_tnc"
                    android:title="@string/terms_and_conditions" />
            </group>
        </menu>
    </item>

</menu>