<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_fragment_home">

    <fragment
        android:id="@+id/nav_fragment_home"
        tools:layout="@layout/fragment_home"
        android:name="com.shashifreeze.appopen.view.ui.home.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/nav_fragment_history"
        tools:layout="@layout/fragment_history"
        android:name="com.shashifreeze.appopen.view.ui.history.HistoryFragment"
        android:label="@string/history" />

    <fragment
        android:id="@+id/nav_fragment_settings"
        android:name="com.shashifreeze.appopen.view.ui.home.HomeFragment"
        android:label="@string/action_settings" />

</navigation>